add notes for css reminder when after long time unused

--- a/output/index.html
+++ b/output/index.html
@@ -19,6 +19,18 @@
 
 <div class="index">    
     <div class="category">
+      <h2 id="css">Css
+      </h2>
+      <div class="category_pages">
+        <ul>
+          <li class="pagelist">  
+              <a href="./css/css_element_general_reminder.html">CSS遗忘项</a>
+          </li>
+        </ul>
+      </div> <!-- end category_pages -->
+    </div> <!-- end category -->
+    <div class="clearfix"></div>  
+    <div class="category">
       <h2 id="intro">Intro
       </h2>
       <div class="category_pages">
@@ -34,9 +46,9 @@
     </div>
     <div id="footer">
       <span>
-        <p>Copyright © 2017 itabas.
+        <p>Copyright © 2017 itabas016.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-04-05 17:08:26</p>
+        <p>Site Generated 2017-04-06 23:03:21</p>
       </span>
     </div>
   </body>
