--- a/output/intro/hellosimiki.html
+++ b/output/intro/hellosimiki.html
@@ -62,9 +62,9 @@
     </div>
     <div id="footer">
       <span>
-        <p>Copyright © 2017 itabas.
+        <p>Copyright © 2017 itabas016.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-04-05 17:08:26</p>
+        <p>Site Generated 2017-04-06 23:03:21</p>
       </span>
     </div>
   </body>
