add git hooks quick start trial and some fantastic linux commands

--- a/output/index.html
+++ b/output/index.html
@@ -19,6 +19,18 @@
 
 <div class="index">    
     <div class="category">
+      <h2 id="command">Command
+      </h2>
+      <div class="category_pages">
+        <ul>
+          <li class="pagelist">  
+              <a href="./command/command_quick_spot.html">Linux Command扫盲点</a>
+          </li>
+        </ul>
+      </div> <!-- end category_pages -->
+    </div> <!-- end category -->
+    <div class="clearfix"></div>  
+    <div class="category">
       <h2 id="css">Css
       </h2>
       <div class="category_pages">
@@ -41,6 +53,18 @@
         </ul>
       </div> <!-- end category_pages -->
     </div> <!-- end category -->
+    <div class="clearfix"></div>  
+    <div class="category">
+      <h2 id="tools">Tools
+      </h2>
+      <div class="category_pages">
+        <ul>
+          <li class="pagelist">  
+              <a href="./tools/git_hooks.html">Git Hooks快捷使用</a>
+          </li>
+        </ul>
+      </div> <!-- end category_pages -->
+    </div> <!-- end category -->
     <div class="clearfix"></div>
 </div>
     </div>
@@ -48,7 +72,7 @@
       <span>
         <p>Copyright © 2017 itabas016.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-04-06 23:03:21</p>
+        <p>Site Generated 2017-04-07 01:21:40</p>
       </span>
     </div>
   </body>
