add ssh-key note

--- a/output/index.html
+++ b/output/index.html
@@ -55,6 +55,18 @@
     </div> <!-- end category -->
     <div class="clearfix"></div>  
     <div class="category">
+      <h2 id="linux">Linux
+      </h2>
+      <div class="category_pages">
+        <ul>
+          <li class="pagelist">  
+              <a href="./linux/ssh_key.html">SSH Key相关问题</a>
+          </li>
+        </ul>
+      </div> <!-- end category_pages -->
+    </div> <!-- end category -->
+    <div class="clearfix"></div>  
+    <div class="category">
       <h2 id="tools">Tools
       </h2>
       <div class="category_pages">
@@ -72,7 +84,7 @@
       <span>
         <p>Copyright © 2017 itabas016.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-04-07 23:21:44</p>
+        <p>Site Generated 2017-04-08 13:44:09</p>
       </span>
     </div>
   </body>
