--- a/output/index.html
+++ b/output/index.html
@@ -72,6 +72,9 @@
       <div class="category_pages">
         <ul>
           <li class="pagelist">  
+              <a href="./tools/git_tips.html">Git command补漏</a>
+          </li>
+          <li class="pagelist">  
               <a href="./tools/git_hooks.html">Git Hooks快捷使用</a>
           </li>
         </ul>
@@ -84,7 +87,7 @@
       <span>
         <p>Copyright © 2017 itabas016.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-04-08 13:44:09</p>
+        <p>Site Generated 2017-04-19 09:36:21</p>
       </span>
     </div>
   </body>
