--- a/output/index.html
+++ b/output/index.html
@@ -26,6 +26,9 @@
           <li class="pagelist">  
               <a href="./command/command_quick_spot.html">Linux Command扫盲点</a>
           </li>
+          <li class="pagelist">  
+              <a href="./command/tips.html">Linux tips</a>
+          </li>
         </ul>
       </div> <!-- end category_pages -->
     </div> <!-- end category -->
@@ -35,6 +38,12 @@
       </h2>
       <div class="category_pages">
         <ul>
+          <li class="pagelist">  
+              <a href="./css/css_layout.html">CSS布局</a>
+          </li>
+          <li class="pagelist">  
+              <a href="./css/css_rules.html">CSS语法梳理</a>
+          </li>
           <li class="pagelist">  
               <a href="./css/css_element_general_reminder.html">CSS遗忘项</a>
           </li>
@@ -87,7 +96,7 @@
       <span>
         <p>Copyright © 2017 itabas016.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-04-19 09:36:21</p>
+        <p>Site Generated 2017-08-13 21:40:52</p>
       </span>
     </div>
   </body>
