add linux wiki gdrive and vps perfmance check

--- a/output/index.html
+++ b/output/index.html
@@ -71,6 +71,12 @@
           <li class="pagelist">  
               <a href="./linux/ssh_key.html">SSH Key相关问题</a>
           </li>
+          <li class="pagelist">  
+              <a href="./linux/vps_performance-check.html">Vps性能检测</a>
+          </li>
+          <li class="pagelist">  
+              <a href="./linux/gdrive_backup.html">用Google Drive备份Vps数据</a>
+          </li>
         </ul>
       </div> <!-- end category_pages -->
     </div> <!-- end category -->
@@ -96,7 +102,7 @@
       <span>
         <p>Copyright © 2017 itabas016.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-08-13 22:28:13</p>
+        <p>Site Generated 2017-08-28 00:08:09</p>
       </span>
     </div>
   </body>
