add bbr installation guide for vps.

--- a/output/index.html
+++ b/output/index.html
@@ -92,6 +92,9 @@
           <li class="pagelist">  
               <a href="./tools/git_hooks.html">Git Hooks快捷使用</a>
           </li>
+          <li class="pagelist">  
+              <a href="./tools/vps_bbr.html">Vps开启bbr加速</a>
+          </li>
         </ul>
       </div> <!-- end category_pages -->
     </div> <!-- end category -->
@@ -102,7 +105,7 @@
       <span>
         <p>Copyright © 2017 itabas016.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-08-28 00:08:09</p>
+        <p>Site Generated 2017-09-07 00:50:30</p>
       </span>
     </div>
   </body>
