--- a/output/linux/vps_performance-check.html
+++ b/output/linux/vps_performance-check.html
@@ -52,6 +52,13 @@
 <h2 id="vps">Vps 指标</h2>
 <h3 id="bench-detail">Bench Detail</h3>
 <p>直接用<a href="https://teddysun.com/444.html">秋水逸冰</a>的<a href="https://github.com/teddysun/across/blob/master/bench.sh">bench.sh</a>脚本跑出的结果很是一般:</p>
+<div class="hlcode"><pre>wget -qO- bench.sh | bash
+
+or
+curl -Lso- bench.sh | bash
+</pre></div>
+
+
 <p><img alt="bench-detail" src="../static/images/vps-d-bench-detail.png" /></p>
 <p>于是又单独查看了Cpu, Memory, Disk等各项参数, swap也没开, 硬盘读写简直了...</p>
 <h3 id="cpu">Cpu</h3>
@@ -95,7 +102,7 @@ chmod +x unixbench.sh
       <span>
         <p>Copyright © 2017 itabas016.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-08-28 00:08:09</p>
+        <p>Site Generated 2017-09-07 00:50:30</p>
       </span>
     </div>
   </body>
